--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 gunicorn==20.1.0
 Flask==2.0.3
 pandas==1.3.4
-sqlalchemy==1.4.39
-flask-sqlalchemy==2.5.1
+SQLAlchemy==1.4.39
+Flask-SQLAlchemy==2.5.1
 psycopg2==2.9.3
