--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.2
 gunicorn==20.1.0
-numpy==1.23.0
+Flask==2.0.3
 pandas==2.0.2
-psycopg2==2.9.3
-python-dateutil==2.8.2
-pytz==2022.1
-six==1.16.0
 SQLAlchemy==1.4.39
-tzdata==2023.3
-wincertstore==0.2
+Flask-SQLAlchemy==2.5.1
+psycopg2==2.9.3
+Jinja2=3.1.2
+MarkupSafe==2.1.1
+greenlet==1.1.2
+itsdangerous==2.1.2
+Werkzeug==2.2.2
