--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pandas==2.0.2
 SQLAlchemy==1.4.39
 Flask-SQLAlchemy==2.5.1
 psycopg2==2.9.3
-Jinja2=3.1.2
+Jinja2==3.1.2
 MarkupSafe==2.1.1
 greenlet==1.1.2
 itsdangerous==2.1.2
